<resources>
    <string name="app_name">2805_1308_map</string>
    <string name="title_activity_maps">Map</string>
    <string name="button_label_place_marker">Place A Marker</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="register_button">register</string>
    <string name="register_username_input">username</string>
    <string name="register_email_input">email</string>
    <string name="register_password_input">password</string>
    <string name="register_confirm_password_input">confirm password</string>
    <string name="login_button">log in</string>
    <string name="register_link_text">create account</string>
    <string name="log_in_remember_me">remember me</string>
    <string name="friends_search_title">find friends</string>
    <string name="friends_list_title">Friends</string>
    <string name="friend_remove_button">delete</string>
    <string name="decline_button">✖</string>
    <string name="accept_button">✓</string>
    <string name="add_friend_button_text">request</string>
    <string name="friend_requests_title">Pending</string>
</resources>
