<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content">
    <ImageView
            android:layout_width="67dp"
            android:layout_height="51dp" app:srcCompat="@drawable/button_blue_big"
            android:id="@+id/friend_avatar" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="20dp" android:layout_marginStart="20dp"
            app:layout_constraintVertical_bias="0.0" app:layout_constraintEnd_toStartOf="@+id/request_username"
            android:layout_marginEnd="10dp" android:layout_marginRight="10dp"/>
    <Button
            android:text="@string/decline_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/friend_request_decline_button"
            android:textAllCaps="false"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.454"
            android:gravity="center" android:layout_marginEnd="28dp" android:layout_marginRight="28dp"
            app:layout_constraintStart_toEndOf="@+id/friend_request_accept_button" android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp" app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/accept_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/friend_request_accept_button"
            android:textAllCaps="false"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="80dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="80dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.454"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@+id/request_username" android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp" app:layout_constraintHorizontal_bias="0.186"/>
    <TextView
            android:text="@string/register_username_input"
            android:layout_width="159dp"
            android:layout_height="37dp"
            android:id="@+id/request_username" android:textSize="23dp"
            android:gravity="center|start" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/friend_avatar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintVertical_bias="0.357" android:textStyle="bold"
            android:layout_marginLeft="10dp" android:layout_marginStart="10dp"
            app:layout_constraintEnd_toStartOf="@+id/friend_request_accept_button" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>
</android.support.constraint.ConstraintLayout>